-- pom and test fixed, repeat completion policy